sidebar merge main

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,6 @@
     ></avon-footer>
     <bottom-navigation></bottom-navigation>
     <cart-sidebar></cart-sidebar>
+    <wishlist-sidebar></wishlist-sidebar>
   </body>
 </html>
